# vector_database

./: .coverage  .gitignore  README.md  info.txt  main.py  pyproject.toml  requirements.txt
src/: __init__.py  settings.py
src/etl/: config.py  main.py  pipeline.py
src/etl/core/: async_vector_db.py  vector_db.py
src/etl/factory/: async_factory.py  base_factory.py  sync_factory.py
src/etl/schema/: async_schema_manager.py  schema_manager.py
src/models/: __init__.py  embedding.py
src/search/: main.py
src/search/api/: app.py  routes.py  state.py
src/search/backend/: faiss_backend.py  pgvector_backend.py
src/search/config/: backends.py  factory.py  settings.py
src/search/core/: abc.py  embedding.py  errors.py  query.py  service.py  similarity.py
src/shared/: __init__.py  db_utils.py  models.py  types.py  utils.py
src/shared/embedding/: __init__.py  sentence_transformer.py
src/tests/: test_vectordb.py
src/tests/connector/: test_sql_connector.py
src/tests/embedding/: test_bert.py  test_sentence_transformer.py
src/tests/metadata/: test_metadata_builder.py
src/tests/splitters/: test_sentence_splitter.py
src/vectordb/: __init__.py  async_vector_db.py  core.py  main.py  models.py  settings.py  utils.py  vector_db.py
src/vectordb/adapters/: memory.py  sql_adapter.py
src/vectordb/connector/: async_sql_connector.py  sql_connector.py
src/vectordb/embedding/: base.py  bert.py  sentence_transformer.py
src/vectordb/embeddings/: base.py  dummy.py
src/vectordb/etl/: __init__.py  base.py
src/vectordb/examples/: example_sql_usage.py  (+2 more)
(+41 files in other folders)
