[project]
name = "vectordb"
version = "0.1.0"
description = "Векторная база данных с ETL, SQL и Sentence Transformers"
authors = [{ name = "Mikhail Kuklin"}]
readme = "README.md"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
